mediacms-k8s-ha/celery-worker-short.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-short
  namespace: mediacms
spec:
  selector:
    matchLabels:
      app: celery-worker-short
  template:
    metadata:
      labels:
        app: celery-worker-short
    spec:
      containers:
      - name: celery-worker-short
        image: hoangbaoan1901/mediacms
        command: [ "/bin/bash","-c" ]
        args:
          - 
            cp /local_settings.py /home/mediacms.io/mediacms/cms/local_settings.py;
            chmod 777 /var/run;
            /home/mediacms.io/bin/celery worker -c 1 -Q short_tasks --loglevel=INFO
        # imagePullPolicy: Always
        resources:
          requests:
            memory: "1000Mi"
            cpu: "500m" 
        volumeMounts:
        - mountPath: /home/mediacms.io/mediacms/media_files
          name: mediacms
          subPath: media_files
        - mountPath: /home/mediacms.io/mediacms/logs
          name: mediacms
          subPath: logs  
        - mountPath: /local_settings.py
          name: settings
          subPath: local_settings.py
      volumes:
        - name: mediacms
          persistentVolumeClaim:
              claimName: mediacms
        - name: settings
          configMap:
            name: local-settings
