mediacms-k8s-ha/postgrers-svr.yaml
# Source: minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: mediacms
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: db-headless
  namespace: mediacms
  labels:
    app: postgres
spec:
  clusterIP: None
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
