mediacms-k8s-ha/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: mediacms
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: mediacms
