mediacms-k8s-ha/mediacms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: mediacms
  namespace: mediacms
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: website
            port: 
              number: 80
  tls:
    - hosts: 
        - localhost
